<resources>
    <string name="app_name">Material Design</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_image">addImage</string>
    <string name="delete_image">deleteImage</string>
    <string name="thumbnail">thumbnail</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="LinearViewHorizontal">LinearView Horizontal</string>
    <string name="GridView">GridView</string>
    <string name="StaggeredViewHorizontal">StaggeredViewHorizontal</string>
    <string name="StaggeredViewVertical">StaggeredViewVertical</string>
    <string name="LinearViewVertical">LinearView Vertical</string>
</resources>
